<resources>
    <string name="app_name">Retrofit2App</string>
    <string name="user_name_label">Name:</string>
    <string name="user_address_label">Address:</string>
    <string name="user_email_label">Email:</string>
    <string name="fetch_btn_label">Fetch New User</string>
    <string name="recycler_view_btn_lbl">To RecyclerView</string>
    <string name="list_view_btn_lbl">To ListView</string>
    <string name="back_btn_lbl">Back</string>
    <string name="clear_users_btn">Clear Users</string>
</resources>
