<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.retrofit2app.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:id="@+id/userNameTv"
        android:text="@string/user_name_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:id="@+id/userAddressTv"
        android:text="@string/user_address_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:id="@+id/userEmailTv"
        android:text="@string/user_email_label" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/fetchUserBtn"
        android:text="@string/fetch_btn_label" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/toListViewBtn"
        android:text="@string/list_view_btn_lbl" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/toRecyclerViewBtn"
        android:text="@string/recycler_view_btn_lbl" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/clearUsersBtn"
        android:text="@string/clear_users_btn" />

</LinearLayout>
